--- a/index.html
+++ b/index.html
@@ -9,68 +9,90 @@
     <body>
         <header>
             <nav>
-                <h1 class="logo-text">Header Logo</h1>
+                <h1 class="logo-text">Spanish Culture</h1>
                 <ul>
-                    <li><a href="#" class="secondary-text">header link one</a></li>
-                    <li><a href="#" class="secondary-text">header link two</a></li>
-                    <li><a href="#" class="secondary-text">header link three</a></li>
+                    <li><a href="#" class="secondary-text">Knowing</a></li>
+                    <li><a href="#" class="secondary-text">Quote</a></li>
+                    <li><a href="#" class="secondary-text">Join</a></li>
                 </ul>
             </nav>
-            <section class="main-section">
-                <div class="main">
-                    <h1 class="main-text">This website is awesome</h1>
-                    <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
+            <section class="nav-section">
+                <div class="nav-content">
+                    <h1 class="primary-text">Spain is awesome</h1>
+                    <p class="secondary-text">
+                        This website shows some Spanish samples of its folklore,
+                        tradition and general culture. Sightseeing to discover 
+                        tradition!</p>
+                    <button class="btn-features">Sign up</button>
                 </div>
-                <div class="image"> 
+                <div class="nav-image"> 
                     <img src="" alt="" />
                 </div>
             </section>
         </header>
-        <section>
-            <h2>Some random information.</h2>
-            <figure class="item">
-                <img src=""/>
-                <figcaption class="caption">Text below the image</figcaption>
-            </figure>
-            <figure class="item">
-                <img src=""/>
-                <figcaption class="caption">Text below the image</figcaption>
-            </figure>
-            <figure class="item">
-                <img src=""/>
-                <figcaption class="caption">Text below the image</figcaption>
-            </figure>
-            <figure class="item">
-                <img src=""/>
-                <figcaption class="caption">Text below the image</figcaption>
-            </figure>       
+        <section class="images-section">
+            <h1>Tourism & Tradition</h1>
+            <div class="images-content">
+                <figure class="image-item">
+                    <div class="image">
+                        <img src=""/>
+                    </div>                    
+                    <figcaption class="caption">
+                        Villages
+                    </figcaption>
+                </figure>
+                <figure class="image-item">
+                    <div class="image">
+                        <img src=""/>
+                    </div>                    
+                    <figcaption class="caption">
+                        Cities
+                    </figcaption>
+                </figure>
+                <figure class="image-item">
+                    <div class="image">
+                        <img src=""/>
+                    </div>
+                    <figcaption class="caption">
+                        Popular Festivals
+                    </figcaption>
+                </figure>
+                <figure class="image-item">
+                    <div class="image">
+                        <img src=""/>
+                    </div>
+                    <figcaption class="caption">
+                        Gastronomy
+                    </figcaption>
+                </figure>         
+            </div>                  
         </section>
-        <section>
-            <figure class="quote">
-                <blockquote>This is an inspiring quote, 
-                    or a testimonial from a customer. 
-                    Maybe it's just filling up space, 
-                    or maybe people will actually read it.
-                     Who knows? All I know is that it looks 
-                     nice.
+        <section class="quote-section">
+            <figure>
+                <blockquote>
+                    Ronda is the place where to go, if you are 
+                    planning to travel to Spain for a honeymoon or 
+                    for being with a girlfriend. The whole city and 
+                    its surroundings are a romantic set... Nice 
+                    promenades, good wine, excellent food, nothing 
+                    to do...
                 </blockquote>
-                <figcaption>-Thor, God of Thunder
-                   </figcaption>
-              </figure>
+                <figcaption>
+                    - Ernest Hemingway
+                </figcaption>
+            </figure>
         </section>
-        <section>
-            <div>
-                <p>
-                    Call to action! It's time!<br>Sign up 
-                    for our product by clicking that button 
-                    right over there!
+        <section class="signup-section">
+            <div class="signup">
+                <p>Ready to know Spain? It's time! 
+                   <br><span>Sign up by clicking that button 
+                   right over there!</span> 
                 </p>
-                <button>Sign up</button>
+                <button class="btn-features">Sign up</button>
             </div>
         </section>
-        <footer>
-            <p>Copyright &copy; The Odin Project 2021</p>            
+        <footer class="secondary-text">
+            <p>Copyright &copy; Tourism in Spain</p>            
         </footer>
     </body>
 </html>
