--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav>
                 <h1 class="logo-text">Spanish Culture</h1>
                 <ul>
-                    <li><a href="#" class="secondary-text">Knowing</a></li>
-                    <li><a href="#" class="secondary-text">Quote</a></li>
-                    <li><a href="#" class="secondary-text">Join</a></li>
+                    <li><a href="#knowing" class="secondary-text">Knowing</a></li>
+                    <li><a href="#quote" class="secondary-text">Quote</a></li>
+                    <li><a href="#join" class="secondary-text">Join</a></li>
                 </ul>
             </nav>
             <section class="nav-section">
@@ -26,16 +26,16 @@
                     <button class="btn-features">Sign up</button>
                 </div>
                 <div class="nav-image"> 
-                    <img src="" alt="" />
+                    <img src="fonts/main.jpg" alt="Spanish Folklore"/>
                 </div>
             </section>
         </header>
-        <section class="images-section">
+        <section class="images-section" id="knowing">
             <h1>Tourism & Tradition</h1>
             <div class="images-content">
                 <figure class="image-item">
                     <div class="image">
-                        <img src=""/>
+                        <img src="fonts/village.png" alt="Villages"/>
                     </div>                    
                     <figcaption class="caption">
                         Villages
@@ -43,7 +43,7 @@
                 </figure>
                 <figure class="image-item">
                     <div class="image">
-                        <img src=""/>
+                        <img src="fonts/city.png" alt="Cities"/>
                     </div>                    
                     <figcaption class="caption">
                         Cities
@@ -51,7 +51,7 @@
                 </figure>
                 <figure class="image-item">
                     <div class="image">
-                        <img src=""/>
+                        <img src="fonts/festival.png" alt="Festivals"/>
                     </div>
                     <figcaption class="caption">
                         Popular Festivals
@@ -59,7 +59,7 @@
                 </figure>
                 <figure class="image-item">
                     <div class="image">
-                        <img src=""/>
+                        <img src="fonts/gastronomy.png" alt="Gastronomy"/>
                     </div>
                     <figcaption class="caption">
                         Gastronomy
@@ -67,7 +67,7 @@
                 </figure>         
             </div>                  
         </section>
-        <section class="quote-section">
+        <section class="quote-section" id="quote">
             <figure>
                 <blockquote>
                     Ronda is the place where to go, if you are 
@@ -78,11 +78,11 @@
                     to do...
                 </blockquote>
                 <figcaption>
-                    - Ernest Hemingway
+                    -Ernest Hemingway
                 </figcaption>
             </figure>
         </section>
-        <section class="signup-section">
+        <section class="signup-section" id="join">
             <div class="signup">
                 <p>Ready to know Spain? It's time! 
                    <br><span>Sign up by clicking that button 
