--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <section class="nav-section">
                 <div class="nav-content">
                     <h1 class="primary-text">Spain is awesome</h1>
-                    <p class="secondary-text"></p>
+                    <p class="secondary-text">
+                        This website shows some Spanish samples of its folklore,
+                        tradition and general culture. Sightseeing to discover 
+                        tradition!</p>
                     <button class="btn-features">Sign up</button>
                 </div>
                 <div class="nav-image"> 
